--- a/src/index.html
+++ b/src/index.html
@@ -19,22 +19,21 @@
     <app-root></app-root>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.globe.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
   <script>
-    VANTA.GLOBE({
+    VANTA.FOG({
       el: ".background",
       mouseControls: true,
       touchControls: true,
       gyroControls: false,
       minHeight: 200.00,
       minWidth: 200.00,
-      scale: 1.00,
-      scaleMobile: 1.00,
-      color: 0xafafaf,
-      color2: 0xafafaf,
-      backgroundColor: 0x161616
-    });
-  </script>
+      highlightColor: 0x49a1ca,
+      midtoneColor: 0x49a1ca,
+      lowlightColor: 0x49a1ca,
+      baseColor: 0xffebeb
+  })
+</script>
 </body>
 </html>
